# cl-model

./: .envrc  .gitignore  .tool-versions  README.md  pyproject.toml  versions.sh
dev-env/: 10.install-deps.sh  20.checks.sh  30.start-jupyter.sh  30.start-prefect.sh  40.submit-model.sh  99.env.sh  99.install-asdf.sh  99.install-utils.sh  99.setup-az-storage.sh  99.stop-prefect.sh
notebooks/: chainladder.ipynb
original/: code.py
src/: FlowSpec.py  MedmalCplFlow.py  StorageApi.py
src/LrModel/: GridSearchModelSpec.py  GridSearchParams.py
src/ModelSpecs/: MedmalCplParams.py
test/: test_FlowSpec.py
